--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <h2>Experiencia</h2>
 
-    <div class="experience">
+    <section class="experience" id = "my-experience">
 
         <div class = experience-1 >   
 
@@ -154,7 +154,7 @@
 
         </div>  
 
-    </div>
+    </section>
 
     <section class="portafolio-box" id = "portafolio">
 
